# lps

./: .gitignore  README.md
lps/src/: CMakeLists.txt
lps/src/arucodrone/: arucodrone.cpp  cameralocation.cpp  commands.cpp  move.cpp
lps/src/include/: inputSettings.xml  out_camera_data.xml
poc/LPS/LPS/: main.cpp  main.h  tmp_main.cpp  tmp_main.h
poc/LPS/LPS.xcodeproj/: project.pbxproj
poc/LPS/LPS.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
poc/LPS/LPS/ar_drone/: drone.cpp  drone.h  move.h
poc/LPS/LPS/camera_calibration/: calibrate.cpp  take_image.cpp
poc/LPS/LPS/detect_marker/: camerlocation.cpp  detect.cpp  location.h  main.cpp  markerlocation.cpp  reaction.cpp  reaction.h
poc/LPS/LPS/include/: calibration_inputSettings.xml  include_img.xml  inputSettings.xml  out_camera_data.xml
poc/ar_drone/ARDroneLib/Soft/Common/: generated_custom.h
poc/ar_drone/ARDroneLib/VP_SDK/VP_Os/: vp_os_thread.h
poc/ar_drone/ar_drone/: fly.cpp  main.cpp  move.cpp  move.hpp
poc/ar_drone/ar_drone.xcodeproj/: project.pbxproj
poc/ar_drone/ar_drone.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
poc/ar_drone/ar_drone/ardrone/: video.cpp
poc/camera_calibration/camera_calibration/: main.cpp  take_image.cpp
poc/camera_calibration/camera_calibration.xcodeproj/: project.pbxproj
poc/camera_calibration/camera_calibration.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
poc/camera_calibration/include/: include_img.xml  inputSettings.xml  out_camera_data.xml
poc/create_marker/create_marker.cpp/: main.cpp
poc/create_marker/create_marker.xcodeproj/: project.pbxproj
poc/create_marker/create_marker.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
poc/detect_marker/detect_marker/: camerlocation.cpp  location.h  lps_marker.cpp  main.cpp  realworld.cpp
poc/detect_marker/detect_marker.xcodeproj/: project.pbxproj
poc/metrics/: docker-compose.yml  prometheus.yml
poc/metrics/example/: Dockerfile  main  main.cpp
poc/metrics/gateway/: main.go
poc/raspberry_pi/: ._detect_marker
poc/raspberry_pi/detect_marker/: ._detect_marker.xcodeproj  ._src  CMakeLists.txt
poc/raspberry_pi/detect_marker/detect_marker.xcodeproj/: ._project.xcworkspace  ._xcuserdata  project.pbxproj
poc/raspberry_pi/detect_marker/include/: out_camera_data.xml
poc/raspberry_pi/detect_marker/src/: ._CMakeLists.txt  ._camerlocation.cpp  CMakeLists.txt  main.cpp
poc/raspberry_pi/lps/: CMakeLists.txt
poc/raspberry_pi/lps/src/: .cproject  .project  CMakeLists.txt  main.cpp
poc/raspberry_pi/lps/src/ar_drone/: PID.cpp  PID.h  drone.cpp  drone.h  move.cpp  move.h
poc/raspberry_pi/lps/src/arucodrone/: arucodrone.cpp  arucodrone.h  cameralocation.cpp  camerlocation.cpp  commands.cpp  detect.cpp  flyto.cpp  markerlocation.cpp  move.cpp  pid.cpp  pid.h
poc/raspberry_pi/lps/src/arucodrone/detect_marker/: location.h
poc/raspberry_pi/lps/src/camera_calibration/: calibrate.cpp  take_image.cpp
poc/raspberry_pi/lps/src/detect_marker/: camerlocation.cpp  detect.cpp  flyto.cpp  location.h  markerlocation.cpp
poc/raspberry_pi/lps/src/include/: calibration_inputSettings.xml  include_img.xml  inputSettings.xml
poc/raspberry_pi/lps/xcode/: CMakeCache.txt  cmake_install.cmake
(+45 files in other folders)
